--- a/main.html
+++ b/main.html
@@ -4,13 +4,47 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+	
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js">
 </script>
+<h1>Welcome to Sync5</h1>
+	<div class="card">
+  <h5 class="card-header">
+    New Features
+  </h5>
+  <div class="card-body">
+    <h5 class="card-title">Mobile and Tablet support</h5>
+    <p class="card-text">With this new update you will be able to sync your work across larger number of platforms.</p>
+    <a href="#" class="btn btn-primary">Read more</a>
+  </div>
+</div>
 
+	<div class="card text-bg-danger mb-3" style="max-width: 18rem;">
+  <div class="card-header">Alert</div>
+  <div class="card-body">
+    <h5 class="card-title">Node Dead</h5>
+    <p class="card-text">Node 5 (east-us) is offline for last 12 days.</p>
+  </div>
+</div>
+
+	<div class="card mb-3">
+  <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?cs=srgb&dl=pexels-jaime-reimer-2662116.jpg&fm=jpg" class="card-img-top" alt="..." style="width:100%;height:16rem">
+  <div class="card-body">
+    <h5 class="card-title">President under Pressure</h5>
+    <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
+    <p class="card-text"><small class="text-body-secondary">Last updated 12 mins ago</small></p>
+  </div>
+</div>
+
+
+
+
+	
 </body>
 
 </html>
