--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
   </h5>
   <div class="card-body">
     <h5 class="card-title">Mobile and Tablet support</h5>
-    <p class="card-text">With this new update you will be able to sync your work across larger number of platforms.</p>
+    <p class="card-text">With this new update you will be able to sync your work across a large number of platforms.</p>
     <a href="#" class="btn btn-primary">Read more</a>
   </div>
 </div>
@@ -27,8 +27,8 @@
 	<div class="card text-bg-danger mb-3" style="max-width: 18rem;">
   <div class="card-header">Alert</div>
   <div class="card-body">
-    <h5 class="card-title">Node Dead</h5>
-    <p class="card-text">Node 5 (east-us) is offline for last 12 days.</p>
+    <h5 class="card-deck">Node Dead</h5>
+    <p class="card-text">Node 5 (east-us) is offline for the last 12 days.</p>
   </div>
 </div>
 
@@ -37,7 +37,7 @@
   <div class="card-body">
     <h5 class="card-title">President under Pressure</h5>
     <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
-    <p class="card-text"><small class="text-body-secondary">Last updated 12 mins ago</small></p>
+    <p class="card-text"><small class="text-muted">Last updated 12 mins ago</small></p>
   </div>
 </div>
 
